#7 [Wandy] - Corrects bug of images overlapping menu

--- a/themes/main/src/sass/menu.scss
+++ b/themes/main/src/sass/menu.scss
@@ -14,6 +14,7 @@
   width: 100%;
   top: 0;
   background: #FFF;
+  z-index: 1;
 }
 
 #page-header .menu-options{
